@@ -1,6 +1,6 @@
 <?php
 $MLANG['default']['tabs_images']['tab'] = 'tool.gif';
-$MLANG['default']['ll_ref']='LLL:EXT:lang/locallang_mod_tools.php';
+$MLANG['default']['ll_ref']='LLL:EXT:lang/locallang_mod_admintools.xml';
 
 $MCONF['name']='tools';
 $MCONF['access']='admin';
