@@ -1,6 +1,6 @@
 <?php
 $MLANG['default']['tabs_images']['tab'] = 'user.gif';
-$MLANG['default']['ll_ref']='LLL:EXT:lang/locallang_mod_user.php';
+$MLANG['default']['ll_ref']='LLL:EXT:lang/locallang_mod_usertools.xml';
 
 $MCONF['defaultMod']='task';
 $MCONF['name']='user';
