@@ -232,7 +232,7 @@ TABLE#typo3-vmenu TR.c-mainitem TD { background-color: #d9d9d8; padding: 1px 1px
 TABLE#typo3-vmenu TR.c-mainitem TD SPAN.c-label A { text-decoration: underline; }
 TABLE#typo3-vmenu TR.c-mainitem TD IMG { vertical-align: middle; margin-right: 2px; }
 TABLE#typo3-vmenu TR.c-mainitem TD SPAN.c-label { position: relative; top: 1px; }
-TABLE#typo3-vmenu TR.c-mainitem TD SPAN.c-iconCollapse { position: absolute; left: 90px; }
+TABLE#typo3-vmenu TR.c-mainitem TD SPAN.c-iconCollapse { position: absolute; left: 100px; }
 TABLE#typo3-vmenu TR.c-mainitem-HL TD { background-color: #aaa; padding: 1px 1px 1px 1px; border: #9BA1A8 1px solid; vertical-align: middle; }
 TABLE#typo3-vmenu TR.c-mainitem-HL TD SPAN.c-label A { text-decoration: underline; }
 TABLE#typo3-vmenu TR.c-mainitem-HL TD IMG { vertical-align: middle; margin-right: 2px; }
