@@ -1,0 +1,13 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<T3locallang>
+	<meta type="array">
+		<description>Standard Admin Tools module labels</description>
+		<type>module</type>
+	</meta>
+	<data type="array">
+		<languageKey index="default" type="array">
+			<label index="mlang_labels_tablabel">Administration and maintenance tools</label>
+			<label index="mlang_tabs_tab">Admin tools</label>
+		</languageKey>
+	</data>
+</T3locallang>
