@@ -1,0 +1,13 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<T3locallang>
+	<meta type="array">
+		<description>Standard User Tools module labels</description>
+		<type>module</type>
+	</meta>
+	<data type="array">
+		<languageKey index="default" type="array">
+			<label index="mlang_labels_tablabel">Your personal tasks, overview and setup</label>
+			<label index="mlang_tabs_tab">User tools</label>
+		</languageKey>
+	</data>
+</T3locallang>
