@@ -8,7 +8,7 @@
 		<languageKey index="default" type="array">
 			<label index="mlang_labels_tablabel">Personal user setup</label>
 			<label index="mlang_labels_tabdescr">This module allows you to customize your backend user profile. Here you can change your active system language, name and email address. You may also configure other general features in the system.</label>
-			<label index="mlang_tabs_tab">Setup</label>
+			<label index="mlang_tabs_tab">User settings</label>
 		</languageKey>
 	</data>
 </T3locallang>
