@@ -1,6 +1,7 @@
 2007-11-22  Ingo Renner	<ingo@typo3.org>
 
 	* fixed bug #6741: Add fields cruser_id and crdate to table fe_groups, credit Malte Jansen
+	* added feature #6793: Rename User and Tools modules, credits Francois Suter
 
 2007-11-22  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
 
